tests/ui/issues/issue-17252.stderr
error[E0391]: cycle detected when const-evaluating + checking `FOO`
  --> $DIR/issue-17252.rs:1:20
   |
LL | const FOO: usize = FOO;
   |                    ^^^
   |
   = note: ...which immediately requires const-evaluating + checking `FOO` again
note: cycle used when const-evaluating + checking `FOO`
  --> $DIR/issue-17252.rs:1:1
   |
LL | const FOO: usize = FOO;
   | ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
